--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
   "homepage": "https://github.com/onnkek/prodgun#readme",
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "css-loader": "^7.1.1",
     "html-webpack-plugin": "^5.5.0",
+    "sass": "^1.75.0",
+    "sass-loader": "^14.2.1",
+    "style-loader": "^4.0.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
@@ -32,5 +38,8 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0"
+  }
 }
