--- a/package.json
+++ b/package.json
@@ -24,13 +24,15 @@
     "@types/node": "^17.0.21",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
-    "css-loader": "^7.1.1",
+    "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
-    "sass": "^1.75.0",
-    "sass-loader": "^14.2.1",
-    "style-loader": "^4.0.0",
+    "mini-css-extract-plugin": "^2.5.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
@@ -40,6 +42,7 @@
   },
   "dependencies": {
     "react": "^18.3.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "react-router-dom": "^6.2.1"
   }
 }
