--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "homepage": "https://github.com/onnkek/prodgun#readme",
   "devDependencies": {
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^17.0.21",
     "@types/react": "^18.3.0",
@@ -28,10 +30,14 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-i18next-extract": "^0.10.0",
     "css-loader": "^6.6.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "i18next": "^21.6.11",
     "mini-css-extract-plugin": "^2.5.3",
+    "react-i18next": "^11.15.5",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "style-loader": "^3.3.1",
@@ -43,6 +49,8 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.3.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-router-dom": "^6.2.1"
