--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.5",
     "@babel/preset-env": "^7.24.5",
+    "@eslint/js": "^9.1.1",
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^17.0.21",
     "@types/react": "^18.3.0",
@@ -33,10 +34,15 @@
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.10.0",
     "css-loader": "^6.6.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.34.1",
     "file-loader": "^6.2.0",
+    "globals": "^15.1.0",
     "html-webpack-plugin": "^5.5.0",
     "i18next": "^21.6.11",
     "mini-css-extract-plugin": "^2.5.3",
+    "prettier-plugin-organize-imports": "^3.2.4",
     "react-i18next": "^11.15.5",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
@@ -44,6 +50,7 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
+    "typescript-eslint": "^7.8.0",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4"
