add error boundary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "public/locales",
     "src/shared/config/i18n"
   ],
-  "i18n-ally.sourceLanguage": "ru"
+  "i18n-ally.sourceLanguage": "ru",
+  "i18n-ally.keystyle": "nested"
 }
