--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "stylelint-config-standard-scss": "^13.1.0",
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
-    "typescript": "^4.5.5",
+    "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.10.2",
@@ -93,10 +93,12 @@
     "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.3",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.2.1"
   },
   "eslintConfig": {
