--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/onnkek/prodgun#readme",
   "devDependencies": {
-    "@babel/core": "^7.24.5",
+    "@babel/core": "^7.17.5",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
@@ -49,6 +49,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^17.0.21",
     "@types/react": "^18.3.0",
