--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
     "src/shared/config/i18n"
   ],
   "i18n-ally.sourceLanguage": "ru",
-  "i18n-ally.keystyle": "nested"
+  "i18n-ally.keystyle": "nested",
 }
