--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --env port=3000",
-    "start:dev:server": "node ./json-server/index.js",
+    "start": "concurrently \"npm run start:front\" \"npm run start:back\"",
+    "start:front": "webpack serve --env port=3000",
+    "start:back": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint": "eslint \"**/*.{ts,tsx}\"",
@@ -37,6 +38,7 @@
     "@babel/preset-typescript": "^7.24.1",
     "@chromatic-com/storybook": "^1.3.3",
     "@eslint/js": "^9.1.1",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.13",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
@@ -79,6 +81,7 @@
     "mini-css-extract-plugin": "^2.5.3",
     "prettier-plugin-organize-imports": "^3.2.4",
     "react-i18next": "^11.18.6",
+    "react-refresh": "^0.14.2",
     "reg-cli": "^0.18.5",
     "regenerator-runtime": "^0.14.1",
     "sass": "^1.49.9",
@@ -99,6 +102,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "concurrently": "^8.2.2",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "react": "^18.3.0",
