--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "moduleResolution": "node",
     "baseUrl": ".",
     "paths": {
-      "*": ["./src/*"]
+      "*": [
+        "./src/*"
+      ]
     },
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
@@ -24,5 +26,8 @@
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
     "./src/**/*.tsx"
+  ],
+  "exclude": [
+    ".fttemplates/*"
   ]
 }
