fix client console errors, add back to scroll position, fix rerender store

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run start:front\" \"npm run start:back\"",
-    "start:front": "webpack serve --env port=3000",
+    "start:front": "webpack serve --env port=3000 --host localhost",
     "start:back": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
@@ -97,7 +97,7 @@
     "webpack": "^5.69.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.15.2"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
