--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
     "@chromatic-com/storybook": "^1.3.3",
-    "@eslint/js": "^9.1.1",
+    "@eslint/js": "^9.4.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.13",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
@@ -52,6 +52,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.5.2",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^17.0.21",
     "@types/react": "^18.3.0",
@@ -62,6 +63,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.10.0",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -93,8 +95,8 @@
     "ts-loader": "^9.2.6",
     "ts-node": "^10.5.0",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.8.0",
-    "webpack": "^5.69.1",
+    "typescript-eslint": "^7.12.0",
+    "webpack": "^5.91.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.2"
