--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run start:front\" \"npm run start:back\"",
-    "start:front": "webpack serve --env port=3000 --host localhost",
+    "start:front": "webpack serve --env port=3000 apiUrl=https://prodgun-backend.vercel.app --host localhost",
     "start:back": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production apiUrl=https://prodgun-backend.vercel.app",
     "build:dev": "webpack --env mode=development",
