--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-virtualized": "^9.21.30",
     "@types/webpack": "^5.28.0",
     "@types/webpack-bundle-analyzer": "^4.7.0",
     "@types/webpack-dev-server": "^4.7.2",
@@ -111,7 +112,8 @@
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-virtualized": "^9.22.5"
   },
   "eslintConfig": {
     "extends": [
