--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "singleAttributePerLine": true,
   "bracketSpacing": true,
   "bracketSameLine": false,
-  "printWidth": 200
+  "printWidth": 200,
+  "sort"
 }
