--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
     "json-server": "^0.17.4",
     "jsonwebtoken": "^9.0.2",
     "mini-css-extract-plugin": "^2.5.3",
