--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
     "storybook": "^8.1.5",
+    "storybook-addon-mock": "^5.0.0",
     "style-loader": "^3.3.1",
     "stylelint-config-recommended": "^14.0.0",
     "stylelint-config-standard-scss": "^13.1.0",
