--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   "homepage": "https://github.com/onnkek/prodgun#readme",
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/plugin-transform-runtime": "^7.24.7",
+    "@babel/plugin-transform-typescript": "^7.24.7",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "@babel/preset-typescript": "^7.24.1",
@@ -53,6 +55,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^14.5.2",
+    "@types/circular-dependency-plugin": "^5.0.8",
     "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^17.0.21",
@@ -65,6 +68,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.10.0",
+    "circular-dependency-plugin": "^5.2.2",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.6.0",
     "eslint": "^8.57.0",
@@ -111,6 +115,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "concurrently": "^8.2.2",
+    "fork-ts-checker-webpack-plugin": "^9.0.2",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "react": "^18.3.0",
